--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,12 @@ charset-normalizer==2.0.9
 click==8.0.3
 colorama==0.4.4
 Flask==2.0.2
+Flask-SQLAlchemy
 gunicorn==20.1.0
 idna==3.3
 itsdangerous==2.0.1
 Jinja2==3.0.3
+pymysql
 MarkupSafe==2.0.1
 newsapi-python==0.2.6
 requests==2.26.0
